--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,5 +3,4 @@ description: IRC DSLink
 dependencies:
   dslink:
     git: https://github.com/IOT-DSA/sdk-dslink-dart.git
-  irc:
-    git: https://github.com/DirectMyFile/irc.dart.git
+  irc: "^2.1.8"
